@@ -1,6 +1,8 @@
 #!/usr/bin/env bash
 
 FOLDER_PATH="/tools/pan-os-php"
+FOLDER_PATH="$(cd "$(dirname -- "$1")" >/dev/null; pwd -P)/$(basename -- "$1")"
+
 USER_VAR=$(whoami)
 
 echo "USER: ${USER_VAR}"
@@ -11,7 +13,9 @@ else
     USER_FOLDER_PATH="/"${USER_VAR}
 fi
 
-echo "FOLDERPATH: ${USER_FOLDER_PATH}"
+
+echo "USER FOLDERPATH: ${USER_FOLDER_PATH}"
+echo "SCRIPT FOLDERPATH: ${FOLDER_PATH}"
 
 echo "bashrc: ${USER_FOLDER_PATH}/.bashrc"
 
@@ -23,6 +27,7 @@ echo "START \"PAN-OS-PHP variables on UBUNTU\"" \
 && echo "" \
 && cat ${FOLDER_PATH}/utils/bash_autocompletion/enable_bash.txt >> ${USER_FOLDER_PATH}/.bashrc \
 && echo "" \
+&& ln -s ${FOLDER_PATH}/utils/bash_autocompletion/pan-os-php.sh /usr/share/bash-completion/completions/pan-os-php \
 && echo "check if everything is successfully installed" \
 && php -r "require('lib/pan_php_framework.php');print \"PAN-OS-PHP LIBRARY - OK INSTALL SUCCESSFUL\n\";" \
 && echo "" \
